--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,16 +1,60 @@
-name: CI Pipeline
+name: ReviewBookHub CI/CD - Spring Boot
 
 on:
   push:
+    branches: [ "main" ]
+  pull_request:
     branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: App 
+
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run echo
-        run: echo "CI funcionando correctamente 🚀"
+      - name: Setup JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
+          cache: maven
+
+      - name: Build and test
+        run: mvn clean verify
+
+      - name: Package Spring Boot app
+        run: mvn package -DskipTests
+
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: reviewbookhub-backend
+          path: App/target/BE-ReviewBookHub-*.jar
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: reviewbookhub-backend
+
+      - name: Deploy Spring Boot backend
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            mkdir -p /opt/reviewbookhub
+            pkill -f BE-ReviewBookHub || true
+            mv *.jar /opt/reviewbookhub/app.jar
+            nohup java -jar /opt/reviewbookhub/app.jar > /opt/reviewbookhub/app.log 2>&1 &
